 cnp-stig-postgresql-port-external-access-bqsg0cv.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-stig-postgresql-port-external-access-3m6m75-
  namespace: kube-system
spec:
  description: "This will Block PostgreSQL External Access"
  endpointSelector:
    matchLabels:
      pod-template-generation: 1
      controller-revision-hash: 56fd47777c
      k8s-app: gcp-compute-persistent-disk-csi-driver
  ingress:
    - fromEntities:
        - cluster
    - fromCIDRSet:
        - cidr: 10.10.10.1/16    #change with your ip address
      toPorts:
        - ports:
            - port: "5432"
